# personal-memory-engine

./: .gitignore  LICENSE  OPENHUMAN_INJECTION.md  README.md  blog-personal-memory-engine.md  generate_demo.py  pyproject.toml  record_demo.py  requirements.txt  run.py
api/: server.py
config/: config.yaml
core/: engine.py  tokenjuice.py
demo_frames/: demo_output.txt  frame_000.txt  frame_001.txt  frame_002.txt  frame_003.txt  frame_004.txt  frame_005.txt  frame_006.txt  frame_007.txt  frame_008.txt
scrapers/: connectors.py
ui/: index.html
