[project]
name = "personal-memory-engine"
version = "0.1.0"
description = "Your personal AI memory engine — auto-fetch, organize, and summarize your digital life"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "longongzi", email = "longongzi@users.noreply.github.com"},
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.9.0",
    "cryptography>=42.0.0",
    "jiter>=0.8.0",
]

[project.optional-dependencies]
wechat = ["wcfrog>=0.3.0"]
ollama = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.urls]
Homepage = "https://github.com/longongzi/personal-memory-engine"
Repository = "https://github.com/longongzi/personal-memory-engine"
